bootstrap form included

--- a/app_indecol/templates/base.html
+++ b/app_indecol/templates/base.html
@@ -32,15 +32,11 @@
                 <li class="nav-item">
                     <a class="nav-link" style="color:green" href="{% url 'persons' %}">Persons</a>
                 </li> 
-                {% comment %} <li class="nav-item">
-                    <a class="nav-link" style="color:green" href="{% url 'student_form' %}">Add Student</a>
-                </li> 
+
                 <li class="nav-item">
-                    <a class="nav-link" style="color:green" href="{% url 'project_form' %}">Add Project</a>
-                </li>  {% endcomment %}
-                {% comment %} <li class="nav-item">
-                    <a class="nav-link"  href="{% url 'bootstrap_form' %}">Filter database</a>
-                </li> {% endcomment %}
+                    <a class="nav-link"  style="color:green" href="{% url 'bootstrap_form' %}">Filter database</a>
+                </li> 
+
                 <li class="nav-item">
                     <a class="nav-link"  href="{% url 'about' %}">About</a>
                 </li>
