--- a/app_indecol/templates/bootstrap_form.html
+++ b/app_indecol/templates/bootstrap_form.html
@@ -30,11 +30,34 @@
 
       <h3>Filter Projects</h3>
       <form method="GET" action="." >
-
+        <div class="form-row">
+          <div class="form-group col-12">
+              <div class="input-group">
+                  <input class="form-control py-2 border-right-0 border" type="search" name="name_contains" placeholder="Name of the project contains ..." />
+                  <span class="input-group-append">
+                      <div class="input-group-text bg-transparent">
+                          <i class="fa fa-search"></i>
+                      </div>
+                  </span>
+              </div>
+          </div>        
+      </div> 
+      <div class="form-row">
+        <div class="form-group col-12">
+            <div class="input-group">
+                <input class="form-control py-2 border-right-0 border" type="search" name="description_contains" placeholder="Description of the project contains ..." />
+                <span class="input-group-append">
+                    <div class="input-group-text bg-transparent">
+                        <i class="fa fa-search"></i>
+                    </div>
+                </span>
+            </div>
+        </div>        
+    </div> 
         <div class="form-row">
             <div class="form-group col-12">
                 <div class="input-group">
-                    <input class="form-control py-2 border-right-0 border" type="search" name="name_contains" placeholder="Name of the project contains ..." />
+                    <input class="form-control py-2 border-right-0 border" type="search" name="name_or_description_contains" placeholder="Name or description of the project contains ..." />
                     <span class="input-group-append">
                         <div class="input-group-text bg-transparent">
                             <i class="fa fa-search"></i>
@@ -43,18 +66,7 @@
                 </div>
             </div>        
         </div>
-        <div class="form-row">
-          <div class="form-group col-12">
-              <div class="input-group">
-                  <input class="form-control py-2 border-right-0 border" type="search" name="description_contains" placeholder="Description of the project contains ..." />
-                  <span class="input-group-append">
-                      <div class="input-group-text bg-transparent">
-                          <i class="fa fa-search"></i>
-                      </div>
-                  </span>
-              </div>
-          </div>        
-      </div>
+
         <div class="form-row">
 
           <div class="form-group col-md-2 col-lg-2">
@@ -70,11 +82,11 @@
 
         {% comment %} il faut faire attention ici quand deux personnes ont le meme nom  de famille ca ne fonctionne pas {% endcomment %}
         <div class="form-group col-md-4">
-          <label for="student">Author</label>
-          <select id="student" class="form-control" name="student">
+          <label for="person">Author</label>
+          <select id="person" class="form-control" name="person">
             <option selected>Choose...</option>
-            {% for student in students %}
-            <option value="{{ student }}">{{student.first_name}}  {{student.last_name}}</option>
+            {% for person in persons %}
+            <option value="{{ person }}">{{person.first_name}}  {{person.last_name}}</option>
             {% endfor %}
           </select>
         </div>
@@ -113,8 +125,8 @@
               <span><b>Description : </b> {{ project.description }}</span><p>
               <span>
                 <b>Person working on the project : </b>
-                {% for student in project.students.all  %}
-                  {{student.first_name}} {{student.last_name}},
+                {% for person in project.persons.all  %}
+                  {{person.first_name}} {{person.last_name}},
                 {% endfor %}
               </span><p>
 
