more details deplayed

--- a/app_indecol/templates/bootstrap_form.html
+++ b/app_indecol/templates/bootstrap_form.html
@@ -69,7 +69,7 @@
 
         </div>
 
-        {% comment %} <div class="form-group col-md-4">
+       <div class="form-group col-md-4">
           <label for="person">Author</label>
           <select id="person" class="form-control" name="person">
             <option selected>Choose...</option>
@@ -77,7 +77,7 @@
             <option value="{{ person }}">{{ person }}</option>
             {% endfor %}
           </select>
-        </div> {% endcomment %}
+        </div> 
 
         <div class="form-group col-md-4">
           <label for="pro_type">Project Type</label>
