--- a/app_indecol/templates/project_details.html
+++ b/app_indecol/templates/project_details.html
@@ -12,19 +12,27 @@
 <p><b>Description : </b>
     {{project.description}}
 </p>
+<p><b>Starting date:</b>{{project.start_date}}</p>
+<p><b>Endind date:</b>{{project.end_date}}</p>
 <p><b>Keyword(s) :</b>{{project.keywords}}</p>
 <p><b>Method(s) :</b>{{project.methods}}</p>
+<p><b>Type of project :</b>{{project.type}}</p>
 <p><b>Group(s) :</b>    
     {%for groups in project.groups.all%}
     <a>{{groups}},</a>
     {%endfor%}</p>
-<p><b>Type of project :</b>{{project.type}}</p>
-<p><b>Starting date:</b>{{project.start_date}}</p>
-<p><b>Endind date:</b>{{project.end_date}}</p>
+
+
 
 <p><b>External partners :</b>
     {%for partners in project.partners.all%}
-    <a>{{partners}},</a>
+        <a  href={{partners.url}}>{{partners}}</a>,   
+
+    {%endfor%}
+</p>
+<p><b>Ressources :</b>
+    {%for ressources in project.ressources.all%}
+    <a  href={{ressources.location}}>{{ressources}}</a>,     
     {%endfor%}
 </p>
 
