--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -2,7 +2,7 @@
 @import url('navBar.css');
 @import url('card.css');
 @import url('signIn.css');
-@import url('react-table.css');
+@import url('table.css');
 @import url('addForm.css');
 @import url('phoneField.css');
 @import url('modal.css');
