--- a/frontend/src/assets/styles/navBar.css
+++ b/frontend/src/assets/styles/navBar.css
@@ -39,10 +39,12 @@ width: 100%;
   color: rgb(204, 204, 204);
 }
 .nav-link{
-width: 100%;
-height: 100%;
-display: flex;
-align-items: center;
+ cursor: pointer;
+ font-size: 1.1rem;
+}
+.nav-link:hover{
+  background-color: #ddda;
+  font-weight: 600;
 }
 .nav-item{
 padding: 0;
