--- a/frontend/src/assets/styles/modal.css
+++ b/frontend/src/assets/styles/modal.css
@@ -88,6 +88,18 @@
     }
 }
 
+.MuiModal-root .MuiBox-root {
+    width: 500px;
+}
+
+@media screen and (max-width: 768px){
+    .MuiModal-root .MuiBox-root {
+        width: 95%;
+        max-height: 95%;
+        overflow-y: scroll;
+    }
+}
+
 
 /* Fixing semantic UI */
 .modal{
