some cleaning and organization

--- a/frontend/public/assets/styles/index.css
+++ b/frontend/public/assets/styles/index.css
@@ -2,8 +2,10 @@
 @import url('navBar.css');
 @import url('card.css');
 @import url('signIn.css');
-@import url('react-table.css');
+@import url('table.css');
 @import url('addForm.css');
 @import url('phoneField.css');
 @import url('modal.css');
 @import url('map.css');
+@import url('help.css');
+@import url('progress.css');
