--- a/frontend/public/assets/styles/navBar.css
+++ b/frontend/public/assets/styles/navBar.css
@@ -39,10 +39,12 @@ width: 100%;
   color: rgb(204, 204, 204);
 }
 .nav-link{
-width: 100%;
-height: 100%;
-display: flex;
-align-items: center;
+ cursor: pointer;
+ font-size: 1.1rem;
+}
+.nav-link:hover{
+  background-color: #ddda;
+  font-weight: 600;
 }
 .nav-item{
 padding: 0;
@@ -110,6 +112,9 @@ ul.navbar-nav.m-auto{
     background-color: #bbb;
 }
 
+nav {
+  height: 80px;
+}
 @media (max-width: 992px){
   #bottomNav {
     display: flex;
@@ -120,5 +125,18 @@ ul.navbar-nav.m-auto{
   }
   .nav-user{
     margin:auto;
+  }
+}
+@media (max-width: 768px){
+  nav span {
+    max-width: 50%;
+    max-height: 90%;
+    line-height: 1;
+  }
+  nav {
+    height: 150px;
+  }
+  #loginForm {
+    width: 60%;
   }
 }
