--- a/frontend/public/assets/styles/oldTemplate.css
+++ b/frontend/public/assets/styles/oldTemplate.css
@@ -9,16 +9,16 @@ body {
 body::after {
   content: "";
   background:url('../images/logo.png');
-  background-size: 90% 90%;
+  background-size: auto 100%;
   background-repeat: no-repeat;
   opacity: 0.1;
-  top: 10%;
-  left: 10%;
-  bottom: 5%;
-  right: 5%;
-  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   position: absolute;
   z-index: -1;
+  background-position: center center;
 }
 
 #root{
@@ -134,7 +134,6 @@ li {
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   border-top: none;
-  margin-top: -1%;
   padding: 5% 0;
 }
 
